# Staff-System

./: .gitignore  CMakeLists.txt  README.md  database.db  run.bat
include/StaffSystem/: LoginDriver.h  Parser.h  StaffDriver.h  StaffList.h  StaffObject.h  SystemDriver.h
resources/: AddEmployeeButton.qml  EmployeeDialog.qml  Globals.qml  HomePage.qml  HomeSideBar.qml  LoadingPage.qml  LoginItem.qml  Notification.qml  NotificationManager.qml  ProgressDialog.qml  StaffAddPopup.qml  StaffDetailsPopup.qml  StaffFilterPopup.qml  StaffList.qml  ToolBar.qml  UserItem.qml  main.qml
src/StaffSystem/: LoginDriver.cpp  Parser.cpp  StaffDriver.cpp  StaffList.cpp  SystemDriver.cpp  main.cpp
